[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
authors = ["Connor Mooney-Collett <connor.mooneycollett@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-utils = { git = "https://github.com/cmooneycollett/aoc-utils", branch = "main" }
fancy-regex = "0.12.0"
lazy_static = "1.4.0"
